Add more UI functionality