@@ -1,6 +1,8 @@
 package ui;
 
 import javax.swing.*;
+import javax.swing.filechooser.FileFilter;
+import javax.swing.filechooser.FileNameExtensionFilter;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
@@ -9,11 +11,10 @@ import java.util.ArrayList;
 public class GameCubeSaveRegionConverterUI extends JFrame implements ActionListener {
 
 
-    private JButton convertSave;
-    private JLabel originalSaveLabel, regionConvertedSaveLabel;
-    private String originalSavePath = "";
-    private String regionConvertedSavePath = "";
-    private JTextField ogsavefield, modsavefield;
+    private JButton originalSaveBrowse, regionConvertedSaveBrowse, saveBrowse, convertSave, convertAgain;
+    private JLabel originalSaveLabel, regionConvertedSaveLabel, saveLabel;
+    private String originalSavePath, regionConvertedSavePath, savePath;
+    private JTextField ogsavefield, modsavefield, saveField;
 
 
     private ArrayList<JPanel> jPanels = new ArrayList<>();
@@ -25,10 +26,20 @@ public class GameCubeSaveRegionConverterUI extends JFrame implements ActionListe
 
     private void generateUI() {
         JPanel mainMenuPanel = new JPanel();
-        GridLayout mainMenuGridLayout = new GridLayout(3, 2);
+        GridLayout mainMenuGridLayout = new GridLayout(3, 3);
         mainMenuPanel.setLayout(mainMenuGridLayout);
 
+        JPanel testPanel = new JPanel();
+        GridLayout testLayout = new GridLayout(2, 3);
+        testPanel.setLayout(testLayout);
+
         //main menu panel
+
+        originalSaveBrowse = new JButton("Browse");
+        originalSaveBrowse.addActionListener(this);
+        regionConvertedSaveBrowse = new JButton("Browse");
+        regionConvertedSaveBrowse.addActionListener(this);
+
         convertSave = new JButton("Convert Save");
         convertSave.addActionListener(this);
 
@@ -43,19 +54,84 @@ public class GameCubeSaveRegionConverterUI extends JFrame implements ActionListe
 
         mainMenuPanel.add(originalSaveLabel);
         mainMenuPanel.add(ogsavefield);
+        mainMenuPanel.add(originalSaveBrowse);
         mainMenuPanel.add(regionConvertedSaveLabel);
         mainMenuPanel.add(modsavefield);
+        mainMenuPanel.add(regionConvertedSaveBrowse);
         mainMenuPanel.add(convertSave);
 
+        saveBrowse = new JButton("Browse");
+        saveBrowse.addActionListener(this);
+
+        convertAgain = new JButton("Convert Save");
+        convertAgain.addActionListener(this);
+
+        saveLabel = new JLabel("Save Path");
+
+        saveField = new JTextField(10);
+        saveField.setEditable(false);
+
+        testPanel.add(saveLabel);
+        testPanel.add(saveField);
+        testPanel.add(saveBrowse);
+        testPanel.add(convertAgain);
+
         jPanels.add(mainMenuPanel);
+        jPanels.add(testPanel);
 
         JTabbedPane tabbedPane = new JTabbedPane();
-        tabbedPane.add("Main Menu", jPanels.getFirst());
+        tabbedPane.add("Two Existing Saves", jPanels.get(0));
+        tabbedPane.add("Create Converted Save from Save", jPanels.get(1));
         add(tabbedPane);
     }
 
     @Override
     public void actionPerformed(ActionEvent e) {
+
+        if (e.getSource() == originalSaveBrowse) {
+            JFileChooser fileChooser = new JFileChooser();
+            FileFilter filter = new FileNameExtensionFilter("GCI File","gci");
+            fileChooser.setFileFilter(filter);
+            fileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+            int response = fileChooser.showOpenDialog(null);
+            if (response == JFileChooser.APPROVE_OPTION) {
+                originalSavePath = fileChooser.getSelectedFile().getAbsolutePath();
+                ogsavefield.setText(originalSavePath);
+            } else {
+                return;
+            }
+
+        }
+
+        if (e.getSource() == regionConvertedSaveBrowse) {
+            JFileChooser fileChooser = new JFileChooser();
+            FileFilter filter = new FileNameExtensionFilter("GCI File","gci");
+            fileChooser.setFileFilter(filter);
+            fileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+            int response = fileChooser.showOpenDialog(null);
+            if (response == JFileChooser.APPROVE_OPTION) {
+                regionConvertedSavePath = fileChooser.getSelectedFile().getAbsolutePath();
+                modsavefield.setText(regionConvertedSavePath);
+            } else {
+                return;
+            }
+
+        }
+
+        if (e.getSource() == saveBrowse) {
+            JFileChooser fileChooser = new JFileChooser();
+            FileFilter filter = new FileNameExtensionFilter("GCI File","gci");
+            fileChooser.setFileFilter(filter);
+            fileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+            int response = fileChooser.showOpenDialog(null);
+            if (response == JFileChooser.APPROVE_OPTION) {
+                savePath = fileChooser.getSelectedFile().getAbsolutePath();
+                saveField.setText(savePath);
+            } else {
+                return;
+            }
+
+        }
 
         if (e.getSource() == convertSave) {
             System.out.println("Hello");
